--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="ko">
+
+
+{% include 'head.html' %}
+
 <body>
-    나의 첫 프로젝트
+     {% include 'header.html' %}
+
+
+     {% block content %}
+     {% endblock %}
+
+    <div style = "height : 20rem; background-color:#38df81 ; border-radius: 1rem; margin : 2rem;">
+
+    </div>
+
+     {% include 'footer.html' %}
+
+
+
 </body>
 </html>
