django course 16 commit

--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -5,8 +5,23 @@
 
 
   <div style = "height : 20rem; background-color:#38df81 ; border-radius: 1rem; margin : 2rem;">
-        <h1> testing
+        <h1>
+            testing
         </h1>
-    </div>
+
+        <form action="/account/hello_world/" method="post">
+            <!-- bootstrap에 있는 클래스를 사용  -->
+            {% csrf_token %}
+            <input type="submit" class ="btn btn-primary" value ="POST">
+
+        </form>
+
+        <h1>
+            {{ text }}
+        </h1>
+
+
+
+  </div>
 
 {% endblock %}
