--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -4,22 +4,27 @@
 {% block content %}
 
 
-  <div style = "height : 20rem; background-color:#38df81 ; border-radius: 1rem; margin : 2rem;">
-        <h1>
-            testing
+  <div style = "border-radius: 1rem; margin: 2rem; text-align: center">
+        <h1 style = "font-family: 'Tourney', cursive;">
+            Hello World LIST!
         </h1>
 
         <form action="/account/hello_world/" method="post">
             <!-- bootstrap에 있는 클래스를 사용  -->
             {% csrf_token %}
-            <input type="submit" class ="btn btn-primary" value ="POST">
+            <div>
+                <input type="text" name = "hello_world_input">
+            </div>
+            <div>
+                 <input type="submit" class ="btn btn-primary" value ="POST">
+            </div>
 
         </form>
-
+        {% if hello_world_output %}
         <h1>
-            {{ text }}
+            {{ hello_world_output.text }}
         </h1>
-
+        {% endif %}
 
 
   </div>
