django course 25 commit

--- a/templates/head.html
+++ b/templates/head.html
@@ -21,25 +21,25 @@
     <style>
         @font-face{
             font-family: 'NanumSquareR';
-            src: local('NanumSquareR';),
+            src: local('NanumSquareR'),
             url("{% static 'fonts/NanumSquareR.ttf' %}") format("opentype");
         }
 
          @font-face{
                     font-family: 'NanumSquareEB';
-                    src: local('NanumSquareEB';),
+                    src: local('NanumSquareEB'),
                     url("{% static 'fonts/NanumSquareEB.otf' %}") format("opentype");
                 }
 
          @font-face{
                     font-family: 'NanumSquareB';
-                    src: local('NanumSquareB';),
+                    src: local('NanumSquareB'),
                     url("{% static 'fonts/NanumSquareB.otf' %}") format("opentype");
                 }
 
          @font-face{
                     font-family: 'NanumSquareR';
-                    src: local('NanumSquareR';),
+                    src: local('NanumSquareR'),
                     url("{% static 'fonts/NanumSquareR.otf' %}") format("opentype");
                 }
 
