--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -8,10 +8,19 @@
 <!--      항상 해당 pk를 가진 데이터를 보여주어야 함 -->
       {{ target_user.date_joined }}
     </p>
-    <h2 style="font-family:'NanumSquareB';">
 
-      {{ target_user.username}}
+      {% if target_user.profile %}
+    <h2 style="font-family:'NanumSquareB';">
+        {{ target_user.profile.nickname }}
     </h2>
+
+     {% endif %}
+      <a href="{% url 'profileapp:create' %}">
+         <h2 style="font-family:'NanumSquareB';">
+            Create Profile
+         </h2>
+
+      </a>
 
     {% if target_user == user %}
       <a href ="{% url 'accountapp:update' pk=user.pk %}">
