--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -4,23 +4,32 @@
 
 <div>
   <div style = "text-align: center; max-width:500px; margin: 4rem auto;">
-    <p>
-<!--      항상 해당 pk를 가진 데이터를 보여주어야 함 -->
-      {{ target_user.date_joined }}
-    </p>
+
+      <img src="{{ target_user.profile.image.url }}" alt=""
+           style="height:12rem; width:12rem; border-radius: 20rem; margin-bottom:2rem;">
+
 
       {% if target_user.profile %}
     <h2 style="font-family:'NanumSquareB';">
         {{ target_user.profile.nickname }}
+        <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+            edit
+        </a>
     </h2>
 
-     {% endif %}
+     {% else %}
       <a href="{% url 'profileapp:create' %}">
          <h2 style="font-family:'NanumSquareB';">
             Create Profile
          </h2>
 
       </a>
+    {% endif %}
+
+      <h5 style="margin-bottom:3rem">
+          {{ target_user.profile.message }}
+      </h5>
+
 
     {% if target_user == user %}
       <a href ="{% url 'accountapp:update' pk=user.pk %}">
