--- a/profileapp/templates/profileapp/update.html
+++ b/profileapp/templates/profileapp/update.html
@@ -8,7 +8,7 @@
 
       </div>
 
-      <form action ="{% url 'profileapp:update'  pk=target_profile.pk %}" method = "post">
+      <form action ="{% url 'profileapp:update' pk=target_profile.pk %}" method ="post" enctype="multipart/form-data">
           {% csrf_token %}
           {% bootstrap_form form %}
           <input type ="submit" class ="btn btn-dark rounded-pill col-6 mt-3">
