--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -5,7 +5,7 @@
 
 <style>
     .container div {
-      width: 250px;
+      width: 150px;
       background-color: antiquewhite;
       display: flex;
       justify-content: center;
@@ -22,58 +22,33 @@
 
 
 
-<div class="container">
-  <div class="item1">
-    <img src="https://picsum.photos/200/300" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/340" alt="">
-  </div>
-   <di>
-    <img src="https://picsum.photos/200/260" alt="">
-  </di>
-   <div>
-    <img src="https://picsum.photos/200/250" alt="">
-  </div>
-  <div>
-    <img src="https://picsum.photos/200/380" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/200" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/390" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/400" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/300" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/300" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/300" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/300" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/300" alt="">
-  </div>
-   <div>
-    <img src="https://picsum.photos/200/300" alt="">
-  </div>
-</div>
 
-    <div style="text-align: center">
-        <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
-            Create Article
+    {% if article_list %}
+    <div class="container">
+
+        {% for article in article_list %}
+        <a href="{% url 'articleapp:detail' pk=article.pk %}">
+            {% include 'snippets/card.html' with article=article %}
         </a>
+        {% endfor %}
+
+    </div>
+        <script src="{% static 'js/magicgrid.js' %}"> </script>
+        {% else %}
+        <div class="text-center">
+            <h1>No Articles YET!</h1>
+        </div>
+        {% endif %}
+
+        {% include 'snippets/pagination.html' with page_obj=page_obj %}
+
+        <div style="text-align: center">
+            <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+                Create Article
+            </a>
     </div>
 
 
-<script src="{% static 'js/magicgrid.js' %}"> </script>
+
 
 {% endblock %}
