--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -30,6 +30,10 @@
       </a>
       {% endif %}
       <hr>
+
+      {% include 'commentapp/create.html' with article=target_article %}
+
+
   </div>
 </div>
 
