--- a/static/base.css
+++ b/static/base.css
@@ -17,3 +17,12 @@
     text-align:center;
     margin : 2rem 0;
 }
+
+@media screen and (max-width:500px){
+
+    html{
+        font-size: 13px;
+
+    }
+
+}
