--- a/commentapp/templates/commentapp/detail.html
+++ b/commentapp/templates/commentapp/detail.html
@@ -12,7 +12,7 @@
     {{ comment.content }}
   </div>
   {% if comment.writer == user %}
-  <div style="text-align: rignt">
+  <div style="text-align: right">
     <a href="{% url 'commentapp:delete' pk=comment.pk %}"
     class ="btn btn-danger rounded-pill">
       Delete
