--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -50,8 +50,16 @@
           </p>
       </a>
     {% endif %}
-
   </div>
+    <div>
+
+        {% include 'snippets/list_fragment.html' with article_list=object_list %}
+
+    </div>
+
+
+
+
 </div>
 
 
