--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -16,6 +16,13 @@
           {{ target_project.description }}
       </h5>
 
+    <div>
+         {% include 'snippets/list_fragment.html' with article_list=object_list %}
+
+
+    </div>
+
+
 
   </div>
 </div>
