django course 45 commit

--- a/templates/head.html
+++ b/templates/head.html
@@ -16,6 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tourney:ital@1&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
 
+    <!-- GOOGLE METERIAL ICONS    -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
     <!--  DEFAULT CSS LINK   -->
     <link rel="stylesheet" type ="text/css" href ="{% static 'base.css' %}">
 
